2004-05-10  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/prefdialog.cc (regexxer_create_font_selection_button):
	Add missing parameters to the function signature.
	(regexxer_create_color_selection_button): ditto.

2004-05-10  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/Makefile.am (global_defines): Define REGEXXER_PKGDATADIR.

	* src/globalstrings.h (glade_prefdialog_filename): New string.

	* src/prefdialog.{cc,h}: Use libglademm to load the dialog UI
	at runtime, and make the actual dialog widget a data member of
	class PrefDialog.  Remove the old UI creation code.

	* src/mainwindow.cc (MainWindow::on_preferences): Use the new
	PrefDialog::get_dialog() accessor to get the actual widget.

2004-05-10  Daniel Elstner  <daniel.elstner@gmx.net>

	* ui: New directory for glade XML files.
	* ui/.cvsignore: New file.
	* ui/Makefile.am: New file.
	* ui/prefdialog.glade: New file defining the UI of the preferences
	dialog.

	* configure.ac (PKG_CHECK_MODULES): Check for libglademm-2.0.
	(AC_CONFIG_FILES): Add ui/Makefile.

	* Makefile.am (SUBDIRS): Add ui.

0.7:

2004-05-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* AUTHORS: Add Murray Cumming.
	* NEWS: Update.

2004-05-08  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/translation.{cc,h} (sgettext): Ditch the sgettext() approach,
	because it's not likely to be supported by libglade when regexxer
	starts using that at some point.  Until now there are no ambiguous
	messages in regexxer, and we can switch back when the need arises.

	* src/controller.cc: Remove the disambiguing "...|" prefix from all
	translatable messages.
	* src/filebuffer.cc: ditto
	* src/filetree.cc: ditto
	* src/mainwindow.cc: ditto
	* src/prefdialog.cc: ditto
	* src/statusline.cc: ditto.

2004-05-07  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/main.cc (stock_icon_info): Rename to 'stock_icon_about',
	as it should have been called in the first place.  Apparently
	I misinterpreted a change in the German GNOME translation as