@@ -1,5 +1,10 @@
 2004-05-10  Daniel Elstner  <daniel.elstner@gmx.net>
 
+	* src/prefdialog.cc (PrefDialog::load_xml): Remove superfluous
+	sub-block.
+
+2004-05-10  Daniel Elstner  <daniel.elstner@gmx.net>
+
 	* src/prefdialog.cc (regexxer_create_font_selection_button):
 	Add missing parameters to the function signature.
 	(regexxer_create_color_selection_button): ditto.
